--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -5,11 +5,11 @@
         android:icon="@drawable/ic_home"
         android:title="Home" />
     <item
-        android:id="@+id/nav_news"
+        android:id="@+id/nav_list"
         android:icon="@drawable/ic_news"
-        android:title="News" />
+        android:title="List" />
     <item
-        android:id="@+id/nav_profile"
+        android:id="@+id/nav_aboutus"
         android:icon="@drawable/ic_profile"
-        android:title="Profile" />
+        android:title="About Us" />
 </menu>
