--- a/app/src/main/res/layout/listpage.xml
+++ b/app/src/main/res/layout/listpage.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/main"
-    tools:context=".Home">
+    android:id="@+id/main">
 
     <!-- Gradient Background -->
     <View
@@ -20,20 +19,19 @@
         android:orientation="vertical"
         android:padding="24dp">
 
-        <!-- Carousel -->
+        <!-- Carousel ViewPager -->
         <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/carouselViewPager"
-            android:layout_width="350dp"
-            android:layout_height="180dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:id="@+id/carouselViewPager2"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginBottom="16dp"/>
 
+        <!-- Header Title -->
         <TextView
             android:id="@+id/welcomeText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Welcome, Calvin"
+            android:text="AnimeDXD List"
             android:textAlignment="center"
             android:textSize="35sp"
             android:textColor="@color/white"
@@ -41,6 +39,15 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"/>
 
+        <!-- Anime List -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/animeRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:clipToPadding="false"
+            android:paddingTop="10dp"
+            />
 
     </LinearLayout>
 
