--- a/app/src/main/res/layout/item_anime.xml
+++ b/app/src/main/res/layout/item_anime.xml
@@ -14,14 +14,51 @@
         android:scaleType="centerCrop"
         android:src="@drawable/slide1" />
 
-    <TextView
-        android:id="@+id/animeTitle"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Anime Title"
-        android:textSize="18sp"
-        android:textColor="@android:color/white"
-        android:layout_gravity="center_vertical"
-        android:layout_marginStart="16dp" />
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/animeTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Anime Title"
+            android:textSize="18sp"
+            android:textColor="@android:color/white"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="16dp" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/Rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Anime Rating"
+                android:textSize="8sp"
+                android:textColor="@android:color/white"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="16dp" />
+            <TextView
+                android:id="@+id/Genre"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Anime Genre"
+                android:textSize="8sp"
+                android:textColor="@android:color/white"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="16dp" />
+        </LinearLayout>
+        <TextView
+            android:id="@+id/Description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Anime Description"
+            android:textSize="12sp"
+            android:textColor="@android:color/white"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="16dp" />
+    </LinearLayout>
 
 </LinearLayout>
+
