--- a/app/src/main/res/layout/item_anime.xml
+++ b/app/src/main/res/layout/item_anime.xml
@@ -1,64 +1,59 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="8dp"
     android:background="@drawable/rounded_image"
-    android:layout_marginBottom="8dp">
+    android:padding="16dp"
+    android:layout_margin="8dp">
 
     <ImageView
         android:id="@+id/animeImage"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:scaleType="centerCrop"
         android:src="@drawable/slide1" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:paddingStart="16dp">
+
         <TextView
             android:id="@+id/animeTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Anime Title"
-            android:textSize="18sp"
-            android:textColor="@android:color/white"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="16dp" />
+            android:text="Title"
+            android:textStyle="bold"
+            android:textSize="18sp"/>
+
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent">
-            <TextView
-                android:id="@+id/Rating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Anime Rating"
-                android:textSize="8sp"
-                android:textColor="@android:color/white"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="16dp" />
+            android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/Genre"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Anime Genre"
-                android:textSize="8sp"
-                android:textColor="@android:color/white"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="16dp" />
+                android:text="Genre"
+                android:textSize="14sp"
+                android:paddingEnd="12sp"/>
+            <TextView
+                android:id="@+id/Rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Rating"
+                android:textSize="14sp"/>
         </LinearLayout>
+
         <TextView
             android:id="@+id/Description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Anime Description"
-            android:textSize="11sp"
-            android:textColor="@android:color/white"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="16dp" />
+            android:text="Description"
+            android:textSize="14sp"
+            android:maxLines="2"
+            android:ellipsize="end"/>
     </LinearLayout>
-
 </LinearLayout>
-
