--- a/app/src/main/res/layout/demon_fragment_synopsis.xml
+++ b/app/src/main/res/layout/demon_fragment_synopsis.xml
@@ -11,23 +11,16 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="DEMON SLAYER"
-            android:textSize="28sp"
-            android:textStyle="bold"
-            android:textColor="@android:color/white"
-            android:layout_gravity="center"
-            android:layout_marginBottom="16dp"/>
-
-        <TextView
-            android:id="@+id/synopsisText"
+            android:id="@+id/framedText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/white"
+            android:padding="16dp"
+            android:layout_margin="16dp"
+            android:background="@drawable/framed_background"
+            android:textColor="#FFFFFF"
             android:textSize="16sp"
-            android:text="Setelah kejadian dari seri TV Demon Slayer: Kimetsu no Yaiba..."
-            android:lineSpacingExtra="4dp"/>
+            android:text="Setelah kejadian dari seri TV 'Demon Slayer: Kimetsu no Yaiba'..."
+            android:elevation="4dp" />
+
     </LinearLayout>
 </ScrollView>
