--- a/app/src/main/res/layout/aboutus.xml
+++ b/app/src/main/res/layout/aboutus.xml
@@ -84,7 +84,7 @@
                 <ImageView
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:src="@drawable/emoji_11" />
+                    android:src="@drawable/ic_home" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -107,7 +107,7 @@
                 <ImageView
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:src="@drawable/emoji_12" />
+                    android:src="@drawable/ic_home" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -132,7 +132,7 @@
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:src="@drawable/emoji_13" />
+                android:src="@drawable/ic_home" />
 
             <TextView
                 android:layout_width="wrap_content"
