--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -24,11 +24,34 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
+                android:id="@+id/iconMenu"
                 android:layout_marginTop="10dp"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/icon_menu">
             </ImageView>
+            <!-- Logout Button (initially hidden) -->
+            <LinearLayout
+                android:id="@+id/logoutContainer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:visibility="gone"
+                android:gravity="center_vertical"
+                android:paddingTop="20dp">
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/icon_menu" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="LOGOUT"
+                    android:textSize="18sp"
+                    android:paddingStart="8dp" />
+            </LinearLayout>
             <ImageView
                 android:layout_width="100dp"
                 android:layout_height="70dp"
