--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -23,42 +23,50 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/iconMenu"
-                android:layout_marginTop="10dp"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/icon_menu">
-            </ImageView>
-            <!-- Logout Button (initially hidden) -->
+
             <LinearLayout
-                android:id="@+id/logoutContainer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:visibility="gone"
-                android:gravity="center_vertical"
-                android:paddingTop="20dp">
+                android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/iconMenu"
+                    android:layout_marginTop="10dp"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@drawable/icon_menu" />
+                    android:src="@drawable/icon_menu">
+                </ImageView>
 
-                <TextView
+                <LinearLayout
+                    android:id="@+id/logoutContainer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="LOGOUT"
-                    android:textSize="18sp"
-                    android:paddingStart="8dp" />
+                    android:orientation="horizontal"
+                    android:visibility="invisible"
+                    android:gravity="center_vertical">
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/icon_menu" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="LOGOUT"
+                        android:textSize="18sp"
+                        android:paddingStart="8dp" />
+                </LinearLayout>
+
             </LinearLayout>
+
             <ImageView
                 android:layout_width="100dp"
                 android:layout_height="70dp"
                 android:src="@drawable/logo_anime_dxd"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="8dp"
-                android:layout_marginLeft="200dp">
+                android:layout_marginLeft="150dp">
             </ImageView>
         </LinearLayout>
 
