List page carousel fix and back button

--- a/app/src/main/res/layout/demon_activity_detail.xml
+++ b/app/src/main/res/layout/demon_activity_detail.xml
@@ -32,6 +32,7 @@
                 android:src="@drawable/demonslayer" />
 
             <ImageView
+                android:id="@+id/BackButton"
                 android:layout_marginTop="10dp"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
