--- a/app/src/main/res/layout/demon_activity_detail.xml
+++ b/app/src/main/res/layout/demon_activity_detail.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/demon_background_color">
 
     <!-- Blurry background image for entire screen -->
     <ImageView
@@ -24,12 +25,25 @@
             android:layout_width="match_parent"
             android:layout_height="200dp">
 
-            <ImageView
-                android:id="@+id/header_image"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/demonslayer" />
+                android:layout_height="match_parent">
+
+                <!-- ImageView as background -->
+                <ImageView
+                    android:id="@+id/header_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/demonslayer" />
+
+                <!-- Foreground background color (with opacity maybe) -->
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/demon_background_color" />
+            </FrameLayout>
+
 
             <ImageView
                 android:id="@+id/BackButton"
@@ -80,7 +94,8 @@
             app:tabMode="fixed"
             app:tabRippleColor="@android:color/transparent"
             app:tabTextColor="@color/demon_tab_text_color"
-            app:tabSelectedTextColor="@android:color/white"/>
+            app:tabSelectedTextColor="@android:color/white"
+            app:tabIndicatorHeight="0dp" />
 
 
         <!-- ViewPager2 -->
