--- a/app/src/main/res/layout/demon_fragment_review.xml
+++ b/app/src/main/res/layout/demon_fragment_review.xml
@@ -188,7 +188,7 @@
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@drawable/jujutsu"
+                    android:src="@drawable/ic_profile"
                     android:layout_marginEnd="8dp" />
 
                 <LinearLayout
@@ -221,6 +221,7 @@
 
         <!-- Add Button -->
         <Button
+            android:id="@+id/addButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Add"
